Revert HTF simulation strategy