@@ -8,6 +8,7 @@ import jakarta.enterprise.context.ApplicationScoped;
 import jakarta.inject.Inject;
 import java.util.ArrayList;
 import java.util.List;
+import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.CopyOnWriteArrayList;
 import java.util.concurrent.Future;
 import java.util.concurrent.ThreadLocalRandom;
@@ -27,12 +28,16 @@ public class MemoryPressureService {
   private volatile boolean running = false;
   private Future<?> pressureTask;
 
-  private long totalBytesAllocated = 0;
+  private final AtomicLong totalBytesAllocated = new AtomicLong(0);
   private long lastStatsTime = System.currentTimeMillis();
 
   private final List<byte[]> tenuredObjects = new CopyOnWriteArrayList<>();
   private static final int TENURED_TARGET_MB = 1024;
   private final AtomicLong tenuredBytesAllocated = new AtomicLong(0);
+
+  private volatile long lastBurstTime = 0;
+  private static final long BURST_INTERVAL_MS = 5000;
+  private static final int BURST_MULTIPLIER = 3;
 
   @Inject @VirtualThreadExecutor private ManagedExecutorService executorService;
 
@@ -62,7 +67,7 @@ public class MemoryPressureService {
     }
 
     running = true;
-    totalBytesAllocated = 0;
+    totalBytesAllocated.set(0);
     lastStatsTime = System.currentTimeMillis();
 
     pressureTask =
@@ -72,6 +77,7 @@ public class MemoryPressureService {
 
               while (running) {
                 try {
+                  long loopStartTime = System.currentTimeMillis();
                   AllocationMode mode = currentMode;
                   if (mode == AllocationMode.OFF) {
                     break;
@@ -79,7 +85,12 @@ public class MemoryPressureService {
 
                   generateGarbage(mode);
 
-                  Thread.sleep(100);
+                  long executionTime = System.currentTimeMillis() - loopStartTime;
+                  long sleepTime = 100 - executionTime;
+
+                  if (sleepTime > 0) {
+                    Thread.sleep(sleepTime);
+                  }
 
                   logStats();
 
@@ -104,44 +115,76 @@ public class MemoryPressureService {
   }
 
   private void generateGarbage(AllocationMode mode) {
-    int allocations = mode.getAllocationsPerIteration();
+    int baseAllocations = mode.getAllocationsPerIteration();
     int bytesPerAlloc = mode.getBytesPerAllocation();
 
-    for (int i = 0; i < allocations; i++) {
-      int pattern = i % 4;
-
-      switch (pattern) {
-        case 0:
-          generateStringGarbage(bytesPerAlloc);
-          break;
-        case 1:
-          generateByteArrayGarbage(bytesPerAlloc);
-          break;
-        case 2:
-          generateObjectGarbage(bytesPerAlloc / 64);
-          break;
-        case 3:
-          generateCollectionGarbage(bytesPerAlloc / 100);
-          break;
+    boolean inBurst = false;
+    if (mode != AllocationMode.OFF) {
+      long now = System.currentTimeMillis();
+      if (now - lastBurstTime >= BURST_INTERVAL_MS) {
+        inBurst = true;
+        lastBurstTime = now;
+        LOGGER.info(
+            String.format(
+                "Burst triggered - %dx allocation for %s mode (simulating market event)",
+                BURST_MULTIPLIER, mode.name()));
       }
+    }
 
-      if (mode == AllocationMode.HIGH || mode == AllocationMode.EXTREME) {
-        int chance = (mode == AllocationMode.EXTREME) ? 10 : 2;
-        if (ThreadLocalRandom.current().nextInt(10000) < chance) {
-          byte[] longLived = new byte[1024 * 1024];
-          ThreadLocalRandom.current().nextBytes(longLived);
-          tenuredObjects.add(longLived);
-          tenuredBytesAllocated.addAndGet(1024 * 1024);
-        }
+    int totalAllocations = inBurst ? baseAllocations * BURST_MULTIPLIER : baseAllocations;
+
+    int numTasks = 4;
+    int allocationsPerTask = totalAllocations / numTasks;
+    CompletableFuture<?>[] futures = new CompletableFuture[numTasks];
+
+    for (int t = 0; t < numTasks; t++) {
+      final int taskAllocations =
+          (t == numTasks - 1)
+              ? totalAllocations - (allocationsPerTask * (numTasks - 1))
+              : allocationsPerTask;
+
+      futures[t] =
+          CompletableFuture.runAsync(
+              () -> {
+                for (int i = 0; i < taskAllocations; i++) {
+                  int pattern = i % 4;
+
+                  switch (pattern) {
+                    case 0:
+                      generateStringGarbage(bytesPerAlloc);
+                      break;
+                    case 1:
+                      generateByteArrayGarbage(bytesPerAlloc);
+                      break;
+                    case 2:
+                      generateObjectGarbage(bytesPerAlloc / 64);
+                      break;
+                    case 3:
+                      generateCollectionGarbage(bytesPerAlloc / 100);
+                      break;
+                  }
+                  totalBytesAllocated.addAndGet(bytesPerAlloc);
+                }
+              },
+              executorService);
+    }
+
+    CompletableFuture.allOf(futures).join();
+
+    if (mode == AllocationMode.HIGH || mode == AllocationMode.EXTREME) {
+      int chance = (mode == AllocationMode.EXTREME) ? 100 : 20;
+      if (ThreadLocalRandom.current().nextInt(10000) < chance) {
+        byte[] longLived = new byte[1024 * 1024];
+        ThreadLocalRandom.current().nextBytes(longLived);
+        tenuredObjects.add(longLived);
+        tenuredBytesAllocated.addAndGet(1024 * 1024);
       }
-
-      totalBytesAllocated += bytesPerAlloc;
     }
 
     if (mode == AllocationMode.HIGH || mode == AllocationMode.EXTREME) {
       while (tenuredBytesAllocated.get() > TENURED_TARGET_MB * 1024L * 1024L) {
         if (!tenuredObjects.isEmpty()) {
-          tenuredObjects.remove(0);
+          tenuredObjects.removeFirst();
           tenuredBytesAllocated.addAndGet(-1024 * 1024);
         } else {
           break;
@@ -186,14 +229,14 @@ public class MemoryPressureService {
     long now = System.currentTimeMillis();
     if (now - lastStatsTime >= 5000) {
       double elapsedSeconds = (now - lastStatsTime) / 1000.0;
-      double mbPerSec = (totalBytesAllocated / (1024.0 * 1024.0)) / elapsedSeconds;
+      long allocated = totalBytesAllocated.getAndSet(0);
+      double mbPerSec = (allocated / (1024.0 * 1024.0)) / elapsedSeconds;
 
       LOGGER.info(
           String.format(
               "Memory Pressure Stats - Mode: %s | Allocated: %.2f MB/sec | Tenured: %d MB (%d objects)",
               currentMode, mbPerSec, getTenuredObjectsMB(), getTenuredObjectCount()));
 
-      totalBytesAllocated = 0;
       lastStatsTime = now;
     }
   }
